--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@
     width: 100px;
     margin-left: 10px;
     background: transparent;
+    z-index: 10;
 }
 .header__logo h1 {
     background: transparent;
@@ -38,4 +39,14 @@
     position: absolute;
     top: 7%;
     right: 35px;
+}
+
+@media (max-width: 720px) {
+    .header__logo {
+        position: absolute;
+        top: -6px;
+    }
+    .header__logo h1 {
+        color: #F3EEE8;
+    }
 }
